added grpc func,message
